docs(docs-infra): fixed missing gray color palette definitions for light and dark modes
Adds the missing gray color palette definitions for both light and dark modes

--- a/adev/shared-docs/components/viewers/docs-viewer/docs-viewer.component.scss
+++ b/adev/shared-docs/components/viewers/docs-viewer/docs-viewer.component.scss
@@ -143,7 +143,7 @@
     height: fit-content;
 
     docs-icon {
-      color: var(--gray-400);
+      color: var(--quaternary-contrast);
       transition: color 0.3s ease;
     }
 
