--- a/adev/src/app/features/tutorial/tutorial-navigation.scss
+++ b/adev/src/app/features/tutorial/tutorial-navigation.scss
@@ -25,7 +25,7 @@
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    color: var(--gray-400);
+    color: var(--quaternary-contrast);
     background-color: var(--page-background);
     border-block-start: 1px solid var(--senary-contrast);
     border-radius: 0 0 0.25rem 0.25rem;
